--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
             "email": "warisman@docotel.com"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": "~2.0.5"
